# larp-manager-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
docs/: implementation_plan.md  larp-manager-server_design.md  larp_manager_db_model.dbm  larp_manager_db_structure.md  phase1_implementation_plan.md
scripts/: init_db.py  init_postgres.sql  run_dev.py  update_requirements.py
src/larp_manager_server/: app_factory.py  database.py  logging_config.py  main.py
src/larp_manager_server/api/dependencies/: __init__.py  auth.py  context.py  database.py  errors.py  pagination.py
src/larp_manager_server/config/: __init__.py  database.py  logging.py  security.py  settings.py
src/larp_manager_server/middleware/: exception_handlers.py
src/larp_manager_server/models/: base.py
src/larp_manager_server/routes/: health.py
tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_models.py
